--- a/index.html
+++ b/index.html
@@ -3,18 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>group-sync-free</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <link rel="icon" type="image/svg+xml" href="/meanwhile-favicon.svg" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/meanwhile-favicon.svg" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/meanwhile-favicon.svg" />
+    <link rel="shortcut icon" href="/meanwhile-favicon.svg" />
+    <title>Meanwhile - Schedule with friends, effortlessly</title>
+    <meta name="description" content="Create shared weekly calendars, find free time together, and coordinate with friends without the scheduling headache." />
+    <meta name="author" content="Arik Karim" />
 
-    <meta property="og:title" content="group-sync-free" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Meanwhile - Schedule with friends, effortlessly" />
+    <meta property="og:description" content="Create shared weekly calendars, find free time together, and coordinate with friends without the scheduling headache." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/placeholder.svg" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@meanwhile_app" />
+    <meta name="twitter:image" content="/placeholder.svg" />
   </head>
 
   <body>
