Add robust font fallbacks for cross-platform compatibility
- Enhanced font fallback stack for Mac/Apple devices
- Added Google Fonts (Crimson Text, Inter) as fallbacks
- Included preload hints for better performance
- Added Apple system fonts (SF Pro, New York, Helvetica Neue)
- Improved font loading with swap and transitions

--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@meanwhile_app" />
     <meta name="twitter:image" content="/placeholder.svg" />
+    
+    <!-- Preload critical fonts -->
+    <link rel="preload" href="/fonts/InstrumentSerif-Regular.woff2" as="font" type="font/woff2" crossorigin />
+    <link rel="preload" href="/fonts/Geist-Regular.woff2" as="font" type="font/woff2" crossorigin />
+    
+    <!-- Google Fonts fallback -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;1,400&family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
   </head>
 
   <body>
