feat: Migrate authentication from localStorage to Supabase database
- Add mobile responsive design to landing page
- Implement week start day preference (Sunday/Monday)
- Add event duplication functionality with day selection
- Update favicon to Meanwhile calendar logo
- Migrate all user authentication to Supabase database
- Migrate group and time block management to Supabase
- Fix infinite recursion RLS policy errors
- Add password hashing and database user validation
- Enable shared groups and calendar events between users

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/meanwhile-favicon.svg" />
     <link rel="icon" type="image/png" sizes="16x16" href="/meanwhile-favicon.svg" />
     <link rel="shortcut icon" href="/meanwhile-favicon.svg" />
+    <link rel="apple-touch-icon" href="/meanwhile-favicon.svg" />
     <title>Meanwhile - Schedule with friends, effortlessly</title>
     <meta name="description" content="Create shared weekly calendars, find free time together, and coordinate with friends without the scheduling headache." />
     <meta name="author" content="Arik Karim" />
